<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_event_24"
        android:orderInCategory="100"
        android:title="@string/action_dayInformation"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_day"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:orderInCategory="100"
        android:title="@string/action_calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_events"
        android:icon="@drawable/ic_baseline_event_available_24"
        android:orderInCategory="100"
        android:title="@string/action_events"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_archiver"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:orderInCategory="100"
        android:title="@string/action_archiver"
        app:showAsAction="always" />

</menu>